# template-project

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  bind.sh
.github/workflows/: audit.yml  test.yml
bind/: project.cpp  project_adder.cpp  project_project.cpp
project-c/: CMakeLists.txt
project-c/abigen/: CMakeLists.txt  project_adder.cpp
project-c/include/: project-errors.h
project-c/include.in/: project_adder.h
project-c/private/: project_adder_private.h
project-c/src/: project-errors.cpp
project-rs/: Cargo.toml  README.md
project-rs/src/: lib.rs
project-rs/tests/: test_adder.rs
project-sys/: Cargo.toml  build.rs  project-c
project-sys/project-c/abigen/: abigen.cpp  project_adder.hpp
project-sys/project-c/include/: project-api-export.h
project-sys/project-c/src/: project_adder.cpp
project-sys/src/: lib.rs  project_adder.rs  test.rs
scripts/: Cargo.toml  build.rs
